--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,25 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nest_app
+  db:
+    container_name: postgres-container
+    image: postgres:15.7
+    restart: always
+    environment:
+      POSTGRES_DB: shorturl
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     ports:
-      - '3000:3000'
+      - "5432:5432" 
+  app:
+    container_name: nest-container
+    build: .
     depends_on:
       - db
-    environment:
-      DATABASE_URL: postgresql://shorturl:mypass@db:5432/shorturl?schema=public
-      SECRET: SECRET
-
-  db:
-    image: postgres:15.7-alpine3.19
-    container_name: postgres_db
-    environment:
-      POSTGRES_USER: shorturl
-      POSTGRES_PASSWORD: mypass
-      POSTGRES_DB: shorturl
     ports:
-      - '5432:5432'
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
+      - "3000:3000" 
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/shorturl?schema=public
+      SECRET: SECRET
+      PORT: 3000
+    command: sh -c "npm run db:push && node dist/main.js"
