--- a/.dockerignore
+++ b/.dockerignore
@@ -8,3 +8,4 @@ Dockerfile      # The dockerfile
 .gitlab-*       # Deploying with gitlab ?
 .github         # Using github actions ?
 *.md            # Any 
+/husky
