--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:push": "npx prisma db push",
-    "prepare": "husky"
+    "prepare": "if [ $NODE_ENV != 'production' ]; then husky install; fi"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
