--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   app:
     container_name: nest-container
     build: .
+    restart: always
     depends_on:
       - db
     ports:
@@ -22,4 +23,3 @@ services:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/shorturl?schema=public
       SECRET: SECRET
       PORT: 3000
-    command: sh -c "npm run db:push && node dist/main.js"
