--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
       "json",
       "ts"
     ],
-    "rootDir": "./",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -85,8 +84,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
+    "roots": ["<rootDir>/src", "<rootDir>/tests"],
     "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/$1"
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "^tests/(.*)$": "<rootDir>/tests/$1"
     }
   }
 }
